# Reef-Workability

./: .gitignore  LICENSE  README.md  download_and_preprocess_all.py  model_training.py  pyproject.toml  report_visualizations.ipynb  test.py
Data/: .gitignore  best_model.pickle  readme.md
analysis/: calm_wind_probability_analysis.py  wind_wave_constraint_analysis.py
data_processing/: download_and_process_all.py
data_processing/collection/: download_australian_whacs.py  download_era5_data.py  download_nopp_hindcast.py  download_tools.py
data_processing/extraction/: extract_era5_grib_data.py  extract_historical_whacs_for_centroids.py  extract_nopp_historical_data.py  extract_whacs_calendar_day.py  extract_whacs_for_visits.py  extract_whacs_weather_failed_visits.py  weather_extractor.py  whacs_weather_extractor.py
data_processing/processing/: merge_monthly_probabilities.py  merge_reef_coordinates.py  merge_reef_weather_grid.py  merge_visit_dfs.py  predict_reef_date_success_probabilities.py  process_bpm_visits.py
models/: batch_predict_workability.py  model_training.py  monotonic_model_training.py
simulation/: reef_visit_simulation.py
visualization/: constrained_probability_heatmaps.py  wind_wave_constraint_analysis.py
