[project]
name = "divesuccess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.6",
    "cartopy>=0.25.0",
    "cdsapi>=0.7.7",
    "cftime>=1.6.5",
    "geopy>=2.4.1",
    "imblearn>=0.0",
    "ml-insights>=1.1.0",
    "netcdf4>=1.7.4",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
    "xarray>=2026.4.0",
    "xgboost>=3.2.0",
]
